--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <head>
 <title>blessing website
 </title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 </body>
-<h1>blessing muhonja</h1>
-<p>my first webpage hosted in git hub</p>
-
+<!--Nav bar -->
+<nav class = "navbar">
+<div class="logo"> blessing</div>
+<ul class="nav-links">
+<li><a href="index.html">home</li>
+<li><a href="about.html">about</li>
+<li><a href="services.html">services</li>
+<li><a href="contact.html">contact</li>
+<ul>
+</nas>
 </body>
 </html>
