--- a/blessing muhonja/about.html
+++ b/blessing muhonja/about.html
@@ -1,11 +1,13 @@
 <html>
 <head>
+
 <title>About</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav>
+	<nav class="navbar">
 
-		<a href="index.html">index</a>
+		<a href="index.html">home</a>
 		<a href="about">about</a>
 		<a href="services">services</a>
 	</nav>
@@ -16,12 +18,37 @@
 	<!--About this image-->
 <p>The place is a desert and it is at night</p>
 <h2>My hobbies</h2>
-<ol>
+<ol> 
 	<li>reading storybooks</li>
 	<li>playing hokey</li>
 	<li>travelling</li>
 	<li>drawing</li>
 	<li>watching movies</li>
 </ol>
+<div>
+    <h3>Fan fact</h3>
+<p> i like making people happy and making jokes and i also like those who are in need and treat people the way i want them to treat me.<br> Sometimes i fear talking talking to people in a crowd and also i dont like to associate with peolple who are selfish and make people unhappy. </p>
+<hr>
+<div>
+	<h3>skills</h3>
+	<ul>
+	<li>reading skills</li>
+	<li>playing skills</li>
+	<li>watching skills</li>
+	<li>plaiting skills</li>
+</ul>
+<h3>subject</h3>
+<table . style="border: 1px solid black;width: 100%;">
+   <tr>
+   	<th>English</th>
+   	<th>Maths</th>
+   	<th>Kiswahili</th>
+   	<tr>
+   		<td>B</td>
+   		<td>B</td>
+   		<td>C</td>
+   </tr>	
+</table>
+</div>
 </body>
 </html>
