--- a/blessing muhonja/index.html
+++ b/blessing muhonja/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>blessing muhonja
+    </title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-
 </body>
 </html>
 <!-- Services Section -->
