my final portfolio

--- a/blessing muhonja/about.html
+++ b/blessing muhonja/about.html
@@ -2,7 +2,7 @@
 <head>
 
 <title>About</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="about.css">
 </head>
 <body>
 	<nav class="navbar">
@@ -11,42 +11,61 @@
 		<a href="about">about</a>
 		<a href="services">services</a>
 	</nav>
-	<h1 style="background-color:deepskyblue;">About me</h1>
-	<p>My name is Blessing Muhonja.Iam in Mudavadi girls high school, when i grow up i would like to be a nurse.My favourite subject is French because it is a foreign language and it is a very easy language.
-	</p>
-	<img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&w=600" alt="tree and moon" width="250" height="250">
-	<!--About this image-->
-<p>The place is a desert and it is at night</p>
-<h2>My hobbies</h2>
-<ol> 
-	<li>reading storybooks</li>
-	<li>playing hokey</li>
-	<li>travelling</li>
-	<li>drawing</li>
-	<li>watching movies</li>
-</ol>
+    <div class="about-section">
+	  <h1 style="background-color:deepskyblue;">About me</h1>
+	  <p>My name is Blessing Muhonja.Iam in Mudavadi girls high school, when i grow up i would like to be a nurse.My favourite subject is French because it is a foreign language and it is a very easy language.
+	</div>
+
+</div>
+    <div class="row"> 	
+     	
+
+		<div class="column">
+		 <div class="column">
+			<div class="card">
+              <img src="images/image2.jfif" style="width:25%">
+                 <div class="image-container">
+                   <h6>blessingmuhonja</h6>
+       	           <p class="title">A FASHION DESIGNER</p>
+       	           <p>To make fashionable and admirable clothes </p>
+       	         <p>Blessing gmail.com</p>
+       	         <button class="button">contact</button>
+       		</div>
+         </div>
+       </div>
+		 <div class="card">
+              <img src="images/profile.jfif" style="width:50%">
+             <div class="image-container">
+                   <h6>blessing muhonja</h6>
+       	           <p class="title">A NURSE</p>
+       	         <p>Blessing gmail.com</p>
+       	         <button class="button">contact</button>
+       		</div>
+         </div>
+       </div>
+    </div>
 <div>
     <h3>Fan fact</h3>
 <p> i like making people happy and making jokes and i also like those who are in need and treat people the way i want them to treat me.<br> Sometimes i fear talking talking to people in a crowd and also i dont like to associate with peolple who are selfish and make people unhappy. </p>
 <hr>
 <div>
-	<h3>skills</h3>
+	<h3>SKILLS</h3>
 	<ul>
 	<li>reading skills</li>
 	<li>playing skills</li>
 	<li>watching skills</li>
 	<li>plaiting skills</li>
 </ul>
-<h3>subject</h3>
-<table . style="border: 1px solid black;width: 100%;">
+<h3>SUBJECT</h3>
+<table . style="border: 1px solid black;width:50%;">
    <tr>
    	<th>English</th>
    	<th>Maths</th>
    	<th>Kiswahili</th>
-   	<tr>
-   		<td>B</td>
+   	<tr style="text-align: center;">
    		<td>B</td>
    		<td>C</td>
+   		<td>B</td>
    </tr>	
 </table>
 </div>
