--- a/blessing muhonja/index.html
+++ b/blessing muhonja/index.html
@@ -1,35 +1,61 @@
-<<!DOCTYPE html>
-<html>
+<html><html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>blessing muhonja
-    </title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+<title>blessing muhonja Website
+</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-</body>
-</html>
+<!-- Top Nav bar -->
+    <nav class="navbar">
+        <div class="logo">blessing muhonja</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li> <!-- Reloads the page -->
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+<!--Hero section-->
+<section id="hero"class="hero-section">
+    <div class="hero-content">
+        <hi>welcome to my website</hi>
+        <hi>NURSE</hi>
+        <p>Alwys believe in yourself </p>
+        <a href="#about" class="btn-primary">Learn More</a>
+    </div>
+</section>
+
+<!--about section-->
+<section id="about"class="about-section">
+    <div class="image-container">
+        <img src="images/profile.jpg">
+    </div>
+    <div class="text-container">
+        <h2>About</h2>
+        <p>I am blessing muhonja  i like plainting hair but when i grow up i would like to be a nurse and help people who are in need</p> 
+</div>
+</section>
 <!-- Services Section -->
     <section id="services" class="services-section">
         <h2>Our Services</h2>
         <div class="services-container">
             <div class="service-box">
-                <img src="images/image1.JPJ" alt="Service 1">
+                <img src="images/Image one.jpg">
                 <h3>Service One</h3>
-                <p>we make sure that our patients stay in a clean place.</p>
+                <p>playing basketball</p>
                 <a href="#">Read More</a>
             </div>
             <div class="service-box">
-                <img src="images/image2.JPJ" alt="Service 2">
+                <img src="images/Image two.jpg" alt="Service 2">
                 <h3>Service Two</h3>
-              <p>i also ensure that the sick treated on time and given attention.</p>
+                <p>Resarching about nurses</p>
                 <a href="#">Read More</a>
             </div>
             <div class="service-box">
-                <img src="images/image3.JFIF" alt="Service 3">
+                <img src="images/Image three.Jfif" alt="Service 3">
                 <h3>Service Three</h3>
-                <p>you can also visit your patient either during the day or at night.</p>
+                <p>how to deal with patients</p>
                 <a href="#">Read More</a>
             </div>
         </div>
@@ -42,116 +68,98 @@
             <ul>
                 <li>HTML & CSS</li>
                 <li>JavaScript</li>
-                <li>reading novels</li>
-                <li>basketball</li>
+                <li>dancing</li>
+                <li>playing handball</li>
                 <!-- Add more skills as needed -->
             </ul>
         </div>
         <div class="education">
             <h2>🎓 Education</h2>
             <ul>
-                <li>Bachelor of Science in nursing, maseno University</li>
-                <li>Mudavdi girls high school 
-
-                <!--services-->
-
-}<!-- Services Section -->
-    <section id="services" class="services-section">
-        <h2>Our Services</h2>
-        <div class="services-container">
-            <div class="service-box">
-                <img src="images/image1.JPJ" alt="Service 1">
-                <h3>Service One</h3>
-                <p>when i grow up i would like to be a nurse .</p>
-                <a href="#">Read More</a>
-            </div>
-            <div class="service-box">
-                <img src="images/image2.JPJ" alt="Service 2">
-                <h3>Service Two</h3>
-                <p>Pra</p>
-                <a href="#">Read More</a>
-            </div>
-            <div class="service-box">
-                <img src="images/image3.JFIF" alt="Service 3">
-                <h3>Service Three</h3>
-                <p>.</p>
-                <a href="#">Read More</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Skills & Education Section -->
-    <section id="skills-education" class="skills-education-section">
-        <div class="skills">
-            <h2>💻 Skills</h2>
-            <ul>
-                <li>HTML & CSS</li>
-                <li>JavaScript</li>
-                <li>reading novels</li>
-                <li>basketball</li>
-                <P>we
-            </ul>
-        </div>
-        <div class="education">
-            <h2>🎓 Education</h2>
-            <ul>
-                <li>Bachelor of Science in nursing, maseno University</li>
-                <li>Mudavadi girls high school</li>
+                <li>, Maseno University</li>
+                <li>Knowing more about nurses</li>
                 <!-- Add more education items as needed -->
             </ul>
         </div>
     </section>
-<!--contact-->
-<section id ="contact" class="contact-section">
-	<h2>contact me</h2>
-<p>if you have any questions or want to get intouch feel free to contact me or send me a message</p>
-<div class = "contact-container"></div>
-	<div class = "contact-info"></div>
-	<div class="contact-card"></div>
-<span class="icon"></span>
-<p><b>Email:</b>blessingmuhonja@gmail.com</p>
-</div>
-<div class="contact-container></div>
-<span class="icon"></div>
-<p><b>telephone:</b>0725013137</p>
-</div><div class="contact-card"></div>
-<span class="icon"></span>
-<p><b>address:</b>Kawangware,Nairobi</p>
-</div>
- </div>
-   </div>
 
-<!--contact -form-->
-<div class="contact-form">
-<form action="#" method="post">
-<label for="name">Name:</label>
-<input type="text"id="name"name="name" required="">
-</div>
-<div class="form group">
-<form action="#"method="post">
-<label for="email">Email:</label>
-<input type="text" id="email" name="email"required>
-   </div>
-<div class="">
-<form action="#" method="post">
-<textarea>="message">Message:</textarea>
-<input type="text"id="message"message="message"rows="5" required>
-</div>
-<button type=submit>send message</button>
-</div>
-    </form>
-</div>
-</div> 
-</section>
-
-            </ul>
-
-
-
-
-
-
-
-
+<!--contact section-->
+<section id="contact" class="contact-section">
+    <h2>Contact Me</h2>
+    <p>If you have any questions or you want to get in touch feel free to contact me or send me a
+    message.</p>
+                    
+    <div class="contact-container">
+             <div class="contact-info">
+               <div class="contact-card">
+                <span class="icon"></span>
+                        <p><b>Email:</b>blessing muhonja@gmail.com</p>
+                </div>
+                <div class="contact-card">
+                   <span class="icon"></span>
+                   <p><b>Telephone:</b>0710492759</p>
+                </div>
+                 <div class="contact-card">
+                   <span class="icon"></span>
+                   <p><b>Address:</b>Dagoretti,Nairobi,Kenya.</p>
+                </div>
+            </div>
+        <!--contact form-->
+        <div class="contact-form">
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" email="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" message="message" rows="5" required></textarea>
+                </div>
+                <button type="submit">send message</button>
+            </form>
         </div>
-    </section>
+    </div>
+</section>
+<!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <h3>About Me</h3>
+                <p>I like playing basketball and also helping the needy.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li> <!-- Reloads the page -->
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h3>Follow Me</h3>
+                <a href="#"><img src="images/icon 1.jpeg" alt="Facebook"></a>
+                <a href="#"><img src="images/twitt.png" alt="Twitter"></a>
+                <a href="#"><img src="images/link in.png" alt="LinkedIn"></a>
+                <a href="#"><img src="images/ig.jpeg" alt="Instagram"></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 My Website. All rights reserved.</p>
+        </div>
+    </footer>
+
+
+<!-- Link to external JavaScript file -->
+<script src="scripts.js"></script>
+
+
+
+</body>
+</html>
+              
